tests/ui/concurrent_cached_expires_ty_exclusive.stderr
error: `expires` and `ty` are mutually exclusive — `expires` generates the store type automatically
 --> tests/ui/concurrent_cached_expires_ty_exclusive.rs:4:4
  |
4 | fn my_fn(x: u32) -> Result<u32, String> {
  |    ^^^^^
